# dataman

./: .gitignore  Cargo.toml  README.md  justfile  todo.md
assets/: .gitignore  data-long.csv  data.csv  data.sqlite
benches/: benchmark.rs  benchmark_regexp.rs  benchmark_rwlock_vs_mutex.rs
src/: app.rs  cli.rs  controller.rs  db.rs  db_user_fn.rs  error.rs  input.rs  lib.rs  main.rs  model.rs  tui.rs  view.rs
src/controller/: command.rs  controller_impl.rs  direction.rs  input.rs  keys copy.rs  mod.rs
src/libstuff/: adapter.rs  converter.rs  datarow.rs  db.rs  mod.rs  model.rs  regexping.rs
src/model/: convert.rs  converter.rs  current_view.rs  database.rs  datarow.rs  db_slice.rs  embedded_engine.rs  metadata.rs  mod.rs  query_builder.rs  regexping.rs  sql_queries.rs
