[package]
name = "dataman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
csv = "1.2.2"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
regex = "1.9.6"
rusqlite = { version = "0.29.0", features = ["bundled", "functions", "backup"] }
serde = { version = "1.0.188", features = ["derive"] }

