[package]
name = "dataman"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
csv = "1.3.0"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.18.0"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
regex = "1.10.4"
rusqlite = { version = "0.31.0", features = ["bundled", "functions", "backup"] }
serde = { version = "1.0.197", features = ["derive"] }
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }


# [dependencies.pyo3]
# version = "0.22.1"
# features = ["auto-initialize", "serde"]
